--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,14 @@ services:
     stdin_open: true
     environment:
       CHOKIDAR_USEPOLLING: true
+
+  theseus:
+    build:
+      context: ./theseus/
+    ports:
+      - "8081:8080"
+    volumes:
+      - ./theseus:/app
+    stdin_open: true
+    environment:
+      CHOKIDAR_USEPOLLING: true
